...
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/register_new_scooter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="260dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/red"
                android:text="DEV: Register New Scooter" />
...
